1999-07-13    <crichton@gimp.org>

	* configure.in: I am a bonehead.  Added gif-lib check.
